# Vulkan-test

./: .gitignore  CLAUDE.md  CMakeLists.txt  QUICKSTART.md  README.md  build_project.bat  install_vulkan_sdk.md  run_project.bat  setup_dependencies.bat
docs/: PHASE1_GUIDE.md
scripts/: compile_shaders.bat  download_vulkan_sdk.bat  install_cmake.bat  verify_vulkan_installation.bat
shaders/: simple.frag  simple.vert
src/: main.cpp
src/Core/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanImage.cpp  VulkanImage.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanSwapchain.cpp  VulkanSwapchain.h  vma_impl.cpp
src/ECS/: Components.h  ECS.cpp  ECS.h
src/Framework/: Application.cpp  Application.h  Camera.cpp  Camera.h  Input.cpp  Input.h  Window.cpp  Window.h
src/Rendering/: ForwardPass.cpp  ForwardPass.h  Material.h  Mesh.cpp  Mesh.h  RenderPass.h  Renderer.cpp  Renderer.h  SimpleMaterial.cpp  SimpleMaterial.h
tools/: compile_shaders.bat
